Fixed overflow issues causing white bar on right side

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -33,9 +33,12 @@
     font-family: 'Open Sans';
     font-size: 1em;
     margin-top: 1%;
+    margin-bottom: 0;
+    padding-bottom: 10px;
 }
 
 .footer_disclaimer{
+    padding-top: 20px;
     width: 80%;
     transform: translate(10%, 0);
     font-family: 'Open Sans';
